--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -1,6 +1,6 @@
 # This starter workflow is for a CMake project running on multiple platforms. There is a different starter workflow if you just want a single platform.
 # See: https://github.com/actions/starter-workflows/blob/main/ci/cmake-single-platform.yml
-name: Windows, Linux, macOS
+name: Windows, Linux, macOS, Android
 
 on:
   push:
@@ -56,7 +56,7 @@ jobs:
             c_compiler: clang
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
 
     - name: Set reusable strings
       # Turn repeated input strings (such as the build output directory) into step outputs. These step outputs can be used throughout the workflow file.
@@ -101,6 +101,20 @@ jobs:
       # Build your program with the given configuration. Note that --config is needed because the default Windows generator is a multi-config generator (Visual Studio generator).
       run: cmake --build ${{ steps.strings.outputs.build-output-dir }} --config ${{ matrix.build_type }} -j3
 
+    - name: set up JDK 11
+      if: matrix.os == 'ubuntu-latest'
+      uses: actions/setup-java@v4
+      with:
+        java-version: '11'
+        distribution: 'temurin'
+        cache: gradle
+    - name: Grant execute permission for gradlew
+      if: matrix.os == 'ubuntu-latest'
+      run: chmod +x gradlew
+    - name: Build with Gradle
+      if: matrix.os == 'ubuntu-latest'
+      run: ./gradlew -p apps/android build
+
     - name: Stage binary for release
       shell: bash
       run: |
@@ -122,4 +136,4 @@ jobs:
         tag_name: nightly
         files: ${{ env.ARTIFACT_PATH }}
         fail_on_unmatched_files: true
-      
+
